added basic calculator using grid layout

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <div class="calContainer">
-            <div class="calBtn">Clear</div>
-            <div class="calBtn">Backspace</div>
+            <div class="calBtn clear">Clear</div>
+            <div class="calBtn">Del</div>
             <div class="calBtn">/</div>
             <div class="calBtn">7</div>
             <div class="calBtn">8</div>
@@ -22,7 +22,7 @@
             <div class="calBtn">2</div>
             <div class="calBtn">3</div>
             <div class="calBtn">+</div>
-            <div class="calBtn">0</div>
+            <div class="calBtn zero">0</div>
             <div class="calBtn">.</div>
             <div class="calBtn">=</div>
 
