--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
     </head>
     <body>
         <div class="calContainer">
-            <div class="calBtn clear">Clear</div>
-            <div class="calBtn">Del</div>
-            <div class="calBtn">/</div>
-            <div class="calBtn">7</div>
-            <div class="calBtn">8</div>
-            <div class="calBtn">9</div>
-            <div class="calBtn">X</div>
-            <div class="calBtn">4</div>
-            <div class="calBtn">5</div>
-            <div class="calBtn">6</div>
-            <div class="calBtn">-</div>
-            <div class="calBtn">1</div>
-            <div class="calBtn">2</div>
-            <div class="calBtn">3</div>
-            <div class="calBtn">+</div>
-            <div class="calBtn zero">0</div>
-            <div class="calBtn">.</div>
-            <div class="calBtn">=</div>
+            <div class="display">80085</div>
+            <button class="calBtn clear">Clear</button>
+            <button class="calBtn">Del</button>
+            <button class="calBtn">/</button>
+            <button class="calBtn">7</button>
+            <button class="calBtn">8</button>
+            <button class="calBtn">9</button>
+            <button class="calBtn">X</button>
+            <button class="calBtn">4</button>
+            <button class="calBtn">5</button>
+            <button class="calBtn">6</button>
+            <button class="calBtn">-</button>
+            <button class="calBtn">1</button>
+            <button class="calBtn">2</button>
+            <button class="calBtn">3</button>
+            <button class="calBtn">+</button>
+            <button class="calBtn zero">0</button>
+            <button class="calBtn">.</button>
+            <button class="calBtn">=</button>
+            
 
         </div>
 
