Added event listeners to buttons started changing button classes to match functionality downloaded font

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <div class="calContainer">
             <div class="display">80085</div>
-            <button class="calBtn clear">Clear</button>
-            <button class="calBtn">Del</button>
+            <button class="clear">Clear</button>
+            <button class="del">Del</button>
             <button class="calBtn">/</button>
             <button class="calBtn">7</button>
             <button class="calBtn">8</button>
@@ -31,5 +31,5 @@
         </div>
 
 
-
+        <script src="scripts.js"></script>
     </body>
