updated functionality in several ways

--- a/index.html
+++ b/index.html
@@ -7,28 +7,33 @@
     </head>
     <body>
         <div class="calContainer">
-            <div class="display">80085</div>
+            <div class="displayContainer">
+                <p class="memory"></p>
+                <div class="display"></div>
+                <p class="empty"></p>
+            </div>
             <button class="clear">Clear</button>
             <button class="del">Del</button>
-            <button class="calBtn">/</button>
+            <button class="operator divide">/</button>
             <button class="calBtn">7</button>
             <button class="calBtn">8</button>
             <button class="calBtn">9</button>
-            <button class="calBtn">X</button>
+            <button class="operator multiply">X</button>
             <button class="calBtn">4</button>
             <button class="calBtn">5</button>
             <button class="calBtn">6</button>
-            <button class="calBtn">-</button>
+            <button class="operator subtract">-</button>
             <button class="calBtn">1</button>
             <button class="calBtn">2</button>
             <button class="calBtn">3</button>
-            <button class="calBtn">+</button>
+            <button class="operator add">+</button>
             <button class="calBtn zero">0</button>
             <button class="calBtn">.</button>
-            <button class="calBtn">=</button>
+            <button class="equals">=</button>
             
 
         </div>
+        
 
 
         <script src="scripts.js"></script>
