allow only one decimal point clean up commented text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button class="calBtn">7</button>
             <button class="calBtn">8</button>
             <button class="calBtn">9</button>
-            <button class="operator multiply">X</button>
+            <button class="operator multiply">*</button>
             <button class="calBtn">4</button>
             <button class="calBtn">5</button>
             <button class="calBtn">6</button>
