added keyboard functionality added footer added rounding to display output

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 
         </div>
         
-
+        <footer>Built by
+            <a class="footer-link" href="https://github.com/BadTartin/" target="_blank">BadTartin</a> 
+            |
+            <a class="footer-link" href="https://github.com/BadTartin/EtchASketch"  target="_blank">Source</a> 
+        </footer>
 
         <script src="scripts.js"></script>
     </body>
